# mlops-project-2023

./: .gitignore  .gitlab-ci.yml  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.dvc/: config
data/: raw.dvc
data/raw/: Осц_1_1.cfg  Осц_1_10.cfg  Осц_1_11.cfg  Осц_1_12.cfg  Осц_1_13.cfg  Осц_1_14.cfg  Осц_1_15.cfg  Осц_1_16.cfg  Осц_1_17.cfg  Осц_1_18.cfg  Осц_1_19.cfg  Осц_1_2.cfg  Осц_1_20.cfg  Осц_1_21.cfg  Осц_1_22.cfg  Осц_1_23.cfg  Осц_1_24.cfg  Осц_1_25.cfg  Осц_1_26.cfg  Осц_1_27.cfg  Осц_1_28.cfg  Осц_1_29.cfg  Осц_1_3.cfg  Осц_1_30.cfg  Осц_1_31.cfg  Осц_1_4.cfg  Осц_1_5.cfg  Осц_1_6.cfg  Осц_1_7.cfg  Осц_1_8.cfg  Осц_1_9.cfg
docker/: .env  Dockerfile  docker-compose.yml
docs/: Makefile  conf.py  index.rst  make.bat  Обработка сигналов.vsdx  Описание разрабатываемой модели.docx  Структура для MLOps.xlsx  ТЗ.docx  Типизация аномалий.xlsx
mlartifacts/464350010782360443/8cd0293c901d42e69d1d98358e9a8a7b/artifacts/signals/: MLmodel  conda.yaml  requirements.txt
models/: model.pt
src/: inference.py  train.py
src/data/: __init__.py  data.py  data_preparation.py  dataloader.py  dataset_maker.py  run.py  signal_dataset.py  test.py
src/models/: lgbm.py  mlp.py  train.py
src/models/mlruns/0/: meta.yaml
src/models/mlruns/766730729203641436/: meta.yaml
src/models/mlruns/766730729203641436/955054ac54e94b2caa2f9a6f79f076ae/: meta.yaml
src/models/mlruns/766730729203641436/ca67db2ee89941cda07380c49b184de4/: meta.yaml
src/models/mlruns/models/MLP/: meta.yaml
src/unit_tests/: signal_dataset.py
(+26 files in other folders)
