[tool.poetry]
name = "mlops-project-2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mlops_project_2023"}]

[tool.poetry.dependencies]
python = "^3.9"
comtrade = "^0.0.10"
flake8 = "^5.0.4"
importlib-metadata = "^4.2.0"
mccabe = "^0.7.0"
numpy = "^1.21.5"
pandas = "^2.0.1"
pycodestyle = "^2.9.1"
pyflakes = "^2.5.0"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
six = "^1.16.0"
typing = "^3.7.4.3"
typing_extensions = "^4.1.1"
zipp = "^3.6.0"
tqdm = "^4.65.0"
setuptools = "^59.6.0"
torch = "^2.0.0"
pylint = "^2.13.9"
scikit-learn = "^1.2.2"
dvc = {extras = ["s3"], version = "^2.56.0"}
mlflow = "^2.3.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
